--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -1,6 +1,13 @@
+main {
+  padding: 10px 10px 50px 10px;
+}
+
 .item-list {
   display: flex;
   border-bottom: 1px solid #eaeaea;
+  justify-content: flex-start;
+  height: 150px;
+  width: auto;
 }
 
 .item-list__img {
@@ -8,6 +15,8 @@
   margin-bottom: 10px;
   margin-top: 12px;
   margin-right: 20px;
+  overflow: hidden;
+  border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 img {
@@ -34,11 +43,18 @@ img {
 }
 
 .write-btn {
-  background-color: #fe6f0f;
+  background-color: rgb(254, 111, 15);
   color: white;
   padding: 10px 10px 10px 10px;
   position: fixed;
   bottom: 100px;
   right: 20px;
   border-radius: 20px;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+  text-decoration: none;
+}
+
+.write-btn:hober {
+  background-color: rgba(254, 111, 15, 0.7);
 }
